--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "style-loader": "^3.3.4",
     "swr": "^2.2.4",
     "ts-node": "^10.9.2",
